<resources>
    <string name="app_name">MyShop</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="welcome_to_grocery_shop">Welcome To Grocery Shop</string>
    <string name="explore_us">Explore Us</string>
    <string name="we_are_happy_msg">We are happy to have You…\nGet ready to buy fresh and freeze, Grocery and Anything you want.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shuvo</string>
    <string name="nav_header_subtitle">shuvo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category">Category</string>
    <string name="menu_offer">Offers</string>
    <string name="menu_new_product">New Products</string>
    <string name="menu_my_order">My Orders</string>
    <string name="menu_my_cart">My Carts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_you_item_here">Search You Item Here…</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="explore_products">Explore Products</string>
    <string name="recommended_products">Recommended</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="discount">Discount :</string>
    <string name="empty_msg">Sorry There is no new Product yet</string>
    <string name="empty_msg_cart">You Cart is Empty</string>
    <string name="empty_msg_order">You have not purchased anything yet</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="total_price">Total Price</string>
</resources>