<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profileIv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/nav_header_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/onlineIv"
                android:visibility="gone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/indicator_online_status"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/nameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="12dp"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCv"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:drawableStartCompat="@drawable/account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEt"
        app:layout_constraintVertical_bias="0.642"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/phoneEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="12dp"
        app:drawableStartCompat="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt"
        app:layout_constraintVertical_bias="0.642"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/addressEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="12dp"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEt"
        app:layout_constraintVertical_bias="0.642"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressEt"
        app:layout_constraintVertical_bias=".3" />
</androidx.constraintlayout.widget.ConstraintLayout>