<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/productIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/offers3" />

        <TextView
            android:id="@+id/productNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:text="@string/popular_products"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/description"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="-5dp"
                android:src="@drawable/ratingbar" />

            <TextView
                android:id="@+id/ratingTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:text="5.0" />

            <TextView
                android:id="@+id/priceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:text="@string/price"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>